[package]
name = "enc-check"
version = "0.2.1"
edition = "2021"
authors = ["cool-mist <n.suryap@gmail.com>"]
license = "GPL-3.0-only"
description = "A tool to inspect utf-8 and utf-16 character encodings"
homepage = "https://github.com/cool-mist/enc"
repository = "https://github.com/cool-mist/enc"
keywords = ["encodings", "utf-8", "utf8", "unicode"]

[dependencies]
argh = "0.1.13"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tabled = "0.14.0"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
